--- a/projeto/index.html
+++ b/projeto/index.html
@@ -4,22 +4,16 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
   <title>Covid Test Booking</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
-
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
   <link href="css\index.css" rel="stylesheet">
-
 </head>
-
 <body>
   <!-- ======= Top Bar ======= -->
   <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
@@ -31,13 +25,10 @@
       </div>
     </div>
   </div>
-
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
-
       <a href="index.html" class="logo mr-auto"><img src="img\LOGO.png" alt="" class="img-fluid"></a>
-
       <nav class="nav-menu d-none d-lg-block align-items-center">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
@@ -48,19 +39,12 @@
           <li><a href="#contacts">Contactos</a></li>
         </ul>
       </nav><!-- .nav-menu -->
-
       <a href="#loginModal" class="btn btn-primary ml-5" data-toggle="modal" id="btnLogin">Login</a>
-
       <a href="#registerModal" class="btn btn-primary ml-3" data-toggle="modal" id="btnRegister">Registar</a>
-
       <a href="#" class="btn btn-primary" style="visibility: hidden;" id="btnLogout">Logout</a>
-
-      
-
       <!-- <button type="button" class="btn btn-primary" style="visibility: hidden;" id="btnLogout">Logout</button> -->
     </div>
   </header><!-- End Header -->
-
   <!-- ======= Image Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container">
@@ -69,13 +53,10 @@
       <a href="#" class="btn-get-started scrollto">Marque Agora</a>
     </div>
   </section><!-- End Image -->
-
   <main id="main">
-
     <!-- ======= Porquê nós Section ======= -->
     <section id="why-us" class="why-us">
       <div class="container">
-
         <div class="row">
           <div class="col-lg-4 d-flex align-items-stretch">
             <div class="content">
@@ -129,57 +110,45 @@
             </div><!-- End .content-->
           </div>
         </div>
-
       </div>
     </section><!-- End Why Us Section -->
-
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container-fluid">
-
         <div class="row">
           <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch">
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
               data-autoplay="true"></a>
           </div>
-
           <div
             class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
             <h3>Enim quis est voluptatibus aliquid consequatur fugiat</h3>
             <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus
               laudantium. Soluta voluptate sed facere corporis dolores excepturi. Libero laboriosam sint et id nulla
               tenetur. Suscipit aut voluptate.</p>
-
             <div>
               <h4 class="title"><a href="">Lorem Ipsum</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
                 occaecati cupiditate non provident</p>
             </div>
-
-            <div">
+            <div>
               <h4 class="title"><a href="">Nemo Enim</a></h4>
               <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                 praesentium voluptatum deleniti atque</p>
           </div>
-
-
         </div>
       </div>
-
       </div>
     </section><!-- End About Section -->
-
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container">
-
         <div class="section-title">
           <h2>Serviços</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
             consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
             in iste officiis commodi quidem hic quas.</p>
         </div>
-
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
@@ -187,34 +156,27 @@
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
             </div>
           </div>
-
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
               <h4><a href="">Teste Antigénio</a></h4>
               <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
             </div>
           </div>
-
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box">
               <h4><a href="">Teste Serológico</a></h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
             </div>
           </div>
-
         </div>
     </section><!-- End Services Section -->
-
-
     <!-- ======= Tipos de Teste Section ======= -->
     <section id="tiposteste" class="tiposteste">
       <div class="container">
-
         <div class="section-title">
           <h2>Tipos de Teste</h2>
           <p>Este website disponibiliza e facilita a marcação de vários tipos de testes Covid-19: Teste de Deteção, Teste Antigénio e Teste Serológico  </p>
         </div>
-
         <div class="row">
           <div class="col-lg-3">
             <ul class="nav nav-tabs flex-column">
@@ -270,19 +232,15 @@
             </div>
           </div>
         </div>
-
       </div>
     </section><!-- End Departments Section -->
-
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq section-bg">
       <div class="container">
-
         <div class="section-title">
           <h2>Perguntas Frequentes</h2>
           <p>Encontre na lista seguinte algumas das principais perguntas frequentes</p>
         </div>
-
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
@@ -295,7 +253,6 @@
                 </p>
               </div>
             </li>
-
             <li data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-2"
                 class="collapsed">Qual é o período de incubação?<i
@@ -306,7 +263,6 @@
                 </p>
               </div>
             </li>
-
             <li data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-3"
                 class="collapsed">O que é um Contacto Próximo?<i
@@ -317,7 +273,6 @@
                 </p>
               </div>
             </li>
-
             <li data-aos="fade-up" data-aos-delay="300">
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-4"
                 class="collapsed">Os antibióticos são efetivos a prevenir e tratar a COVID-19?<i
@@ -328,7 +283,6 @@
                 </p>
               </div>
             </li>
-
             <li data-aos="fade-up" data-aos-delay="400">
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-5"
                 class="collapsed">Onde posso fazer o teste?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
@@ -338,74 +292,54 @@
                 </p>
               </div>
             </li>
-
           </ul>
         </div>
-
       </div>
     </section><!-- End Frequently Asked Questions Section -->
-
     <section id="map"></section>
-
     <script>
       let map;
-      
       function initMap() {
         console.log("in")
         map = new google.maps.Map(document.getElementById("map"), {
           center: { lat: 41.1496100, lng: -8.6109900 },
           zoom: 12,
         });
-
         console.log(map)
       }
     </script>
-
-
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvb3VJtmsMAqTQR1EU3xWY2Z35iSBEC1U&callback=initMap&libraries=&v=weekly"
       async>
       </script>
-
-
     <!-- ======= Contact Section ======= -->
     <section id="contacts" class="contact">
       <div class="container">
-
         <div class="section-title">
           <h2>Contactos</h2>
           <p>Deixe-nos uma mensagem</p>
         </div>
       </div>
-
-
       <div class="container">
         <div class="row mt-5">
-
           <div class="col-lg-4">
             <div class="info">
               <div class="address">
                 <h4>Localização:</h4>
                 <p>981, R. Dom Sancho I, 4480-876</p>
               </div>
-
               <div class="email">
                 <h4>Email:</h4>
                 <p>ajudacliente@covidtesting.com</p>
               </div>
-
               <div class="phone">
                 <h4>Telefone:</h4>
                 <p>+351 914 358 147</p>
               </div>
-
             </div>
-
           </div>
-
           <div class="col-lg-8 mt-5 mt-lg-0">
-
             <div>
               <div class="form-row">
                 <div class="col-md-6 form-group">
@@ -427,15 +361,12 @@
               <div class="text-center"><a href="#" class="btn btn-primary">Submeter</a>
               </div>
             </div>
-
           </div>
-
         </div>
-
       </div>
     </section><!-- End Contact Section -->
 
-  </main><!-- End #main -->
+  </main>
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
