--- a/projeto/html/profile.html
+++ b/projeto/html/profile.html
@@ -51,9 +51,9 @@
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="#loginModal" class="appointment-btn scrollto" data-toggle="modal" id="btnLogin">Login</a>
+      <a href="#loginModal" class="btn btn-primary ml-5" data-toggle="modal" id="btnLogin">Login</a>
 
-      <a href="#registerModal" class="appointment-btn scrollto" data-toggle="modal" id="btnRegister">Registar</a>
+      <a href="#registerModal" class="btn btn-primary ml-3" data-toggle="modal" id="btnRegister">Registar</a>
 
       <a href="#" class="appointment-btn scrollto" style="visibility: hidden;" id="btnLogout">Logout</a>
 
@@ -72,14 +72,16 @@
                   <div class="user-avatar">
                     <img src="img\test_deteçao.jpg" alt="" class="img-fluid">
                     <input type="text" class="form-control" id="imgUrl" placeholder="Enter image URL">
-                    <button type="button" id="submit" name="submit" class="btn btn-secondary">Save Image</button>
+                    <button type="button" id="submit" name="submit" class="btn btn-secondary">Guardar imagem</button>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
+
+
+        <!-- <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
           <div class="card h-100">
             <div class="card-body">
               <div class="row gutters">
@@ -88,39 +90,39 @@
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                   <div class="form-group">
-                    <label for="fullName">Username</label>
-                    <input type="text" class="form-control" id="fullName" placeholder="">
+                    <label for="username">Username:</label>
+                    <input type="text" class="form-control" id="text_username" placeholder="">
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                   <div class="form-group">
-                    <label for="eMail">Nome</label>
-                    <input type="email" class="form-control" id="eMail" placeholder="">
+                    <label for="name">Nome:</label>
+                    <input type="text" class="form-control" id="txt_name" placeholder="">
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                   <div class="form-group">
-                    <label for="phone">Email</label>
-                    <input type="text" class="form-control" id="phone" placeholder="">
+                    <label for="email">E-mail:</label>
+                    <input type="email" class="form-control" id="txt_email" placeholder="">
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                   <div class="form-group">
-                    <label for="website">Telefone</label>
-                    <input type="url" class="form-control" id="website" placeholder="">
+                    <label for="phone">Telefone</label>
+                    <input type="phone" class="form-control" id="txt_phone" placeholder="">
                   </div>
                 </div>
               </div>
               <div class="row gutters">
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                   <div class="form-group">
-                    <label for="Street">Morada</label>
-                    <input type="name" class="form-control" id="Street" placeholder="">
+                    <label for="address">Morada</label>
+                    <input type="text" class="form-control" id="txt_address" placeholder="">
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                   <div class="form-group">
-                    <label for="ciTy">Genero</label>
+                    <label for="gender">Genero</label>
                     <input type="name" class="form-control" id="ciTy" placeholder="">
                   </div>
                 </div>
@@ -147,13 +149,59 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
 
-  
-
+  <form id="frmRegister">
+    <div class="form-group d-flex justify-content-center">
+      <h5 class="modal-title d-flex justify-content-center " id="exampleModalLabel">Registo</h5>
+    </div>
+    <div class="form-group d-flex justify-content-center">
+      <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_username_edit"
+        aria-describedby="usernameHelp" placeholder="Nome de Utilizador">
+    </div>
+    <div class="form-group d-flex justify-content-center">
+      <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_fullname_edit"
+        aria-describedby="fullnameHelp" placeholder="Nome Completo">
+    </div>
+    <div class="form-group d-flex justify-content-center">
+      <input type="email" class="form-control col-lg-6 mt-2 modalField" id="txt_email_edit"
+        aria-describedby="emailHelp" placeholder="E-mail">
+    </div>
+    <div class="form-group d-flex justify-content-center">
+      <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_address_edit"
+        aria-describedby="addressHelp" placeholder="Morada">
+    </div>
+    <div class="form-group d-flex justify-content-center">
+      <input type="tel" class="form-control col-lg-6 mt-2 modalField" id="txt_phone_eit"
+        aria-describedby="phoneHelp" placeholder="Telefone">
+    </div>
+    <div class="form-group d-flex justify-content-center">
+      <select type="select" class="form-control col-lg-6 mt-2 mr-1 modalField" id="txt_gender_edit">
+        <option value="" disabled selected>Escolha uma opção</option>
+        <option value="male">Masculino</option>
+        <option value="female">Feminino</option>
+      </select>
+    </div>
+    <div class="form-group d-flex justify-content-center">
+      <input type="date" name="bday" max="2021-06-20" min="1800-01-01"
+        class="form-control col-lg-6 mt-2 modalField" id="date_birthday_edit">
+    </div>
+    <div class="form-group d-flex justify-content-center">
+      <input type="password" class="form-control col-lg-3 mt-3 mr-1 modalField" id="txt_password_edit"
+        aria-describedby="weightHelp" placeholder="Password">
+      <input type="password" class="form-control col-lg-3 mt-3 mr-1 modalField"
+        id="txt_confirmPassword_register" aria-describedby="pwconfimHelp" placeholder="Confirm">
+    </div>
+    <div class="d-flex justify-content-center mb-3">
+      <button type="button" class="btn btn-secondary navButton mr-1 col-lg-3 "
+        data-dismiss="modal">Cancelar</button>
+      <button type="submit" class="btn btn-primary navButton col-lg-3">Editar</button>
+    </div>
+    <div id="registerMessage" class="col-lg-12 d-flex justify-content-center"></div>
+  </form>
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
