admin list and "remove"

--- a/projeto/html/adminUser.html
+++ b/projeto/html/adminUser.html
@@ -41,8 +41,25 @@
               </ul>
             </div>
           </nav>
+
     </div>
+    <table id="tabelaUser">
+       <th>username</th>
+       <th>password</th>
+       <th>email</th>
+       <th>phone</th>
+       <th>b day</th>
+       <th>address</th>
+       <th>gender</th>
+       <th>Full Name</th>
+       <th>Photo</th>
+       <th>Points</th>
+       <th>type</th>
+       <th>Actions</th>
+        
+    </table>
   </div>
 </body>
+<script type="module" src="..\js\app.js"></script>
 
 </html>
