--- a/projeto/html/adminUser.html
+++ b/projeto/html/adminUser.html
@@ -14,7 +14,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/admin.css">
+  <link rel="stylesheet" href="../css/admin.css">
   <title>CTB</title>
 </head>
 
@@ -43,18 +43,19 @@
           </nav>
 
     </div>
-    <table id="tabelaUser">
-       <th>username</th>
-       <th>password</th>
-       <th>email</th>
-       <th>phone</th>
-       <th>b day</th>
-       <th>address</th>
-       <th>gender</th>
+    <table id="tabelaUser" class="consult">
+       <th>Username</th>
+       <th>Password</th>
+       <th>Confirm Password</th>
+       <th>Email</th>
+       <th>Phone</th>
+       <th>Birthday</th>
+       <th>Address</th>
+       <th>Gender</th>
        <th>Full Name</th>
        <th>Photo</th>
        <th>Points</th>
-       <th>type</th>
+       <th>Type</th>
        <th>Actions</th>
         
     </table>
