--- a/projeto/index.html
+++ b/projeto/index.html
@@ -38,12 +38,13 @@
           <li><a href="#">Postos</a></li>
           <li><a href="#contacts">Contactos</a></li>
         </ul>
-      </nav><!-- .nav-menu -->
+      </nav>
       <a href="#loginModal" class="btn btn-primary ml-5" data-toggle="modal" id="btnLogin">Login</a>
       <a href="#registerModal" class="btn btn-primary ml-3" data-toggle="modal" id="btnRegister">Registar</a>
+      <div class="container1"></div>
       <a href="#" class="btn btn-primary" style="visibility: hidden;" id="btnLogout">Logout</a>
     </div>
-  </header><!-- End Header -->
+  </header>
   <!-- ======= Image Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container">
@@ -51,7 +52,7 @@
       <h2>Sem Preocupações, Sem Complicações</h2>
       <a href="#" class="btn-get-started scrollto">Marque Agora</a>
     </div>
-  </section><!-- End Image -->
+  </section>
   <main id="main">
     <!-- ======= Porquê nós Section ======= -->
     <section id="why-us" class="why-us">
