--- a/projeto/html/profile.html
+++ b/projeto/html/profile.html
@@ -64,7 +64,7 @@
   <div>
     <div class="container">
       <div class="row gutters">
-        <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
+        <!-- <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
           <div class="card h-100">
             <div class="card-body">
               <div class="account-settings">
@@ -78,7 +78,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
 
         <!-- <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
@@ -156,7 +156,7 @@
 
   <form id="frmRegister">
     <div class="form-group d-flex justify-content-center">
-      <h5 class="modal-title d-flex justify-content-center " id="exampleModalLabel">Registo</h5>
+      <h5 class="modal-title d-flex justify-content-center " id="exampleModalLabel">Editar perfil</h5>
     </div>
     <div class="form-group d-flex justify-content-center">
       <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_username_edit"
