--- a/projeto/index.html
+++ b/projeto/index.html
@@ -35,7 +35,7 @@
           <li><a href="#about">Sobre</a></li>
           <li><a href="#services">Serviços</a></li>
           <li><a href="#tiposteste">Testes</a></li>
-          <li><a href="#">Postos</a></li>
+          <li><a href="./html/labs.html">Centros</a></li>
           <li><a href="#contacts">Contactos</a></li>
         </ul>
       </nav>
