--- a/projeto/html/detailLab.html
+++ b/projeto/html/detailLab.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyMusic - Band</title>
+    <title>Covid Test Booking</title>
     <!-- REFERÊNCIA AO CSS DO BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -24,11 +24,10 @@
 </head>
 
 <body>
-    <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center">
 
-            <a href="index.html" class="logo mr-auto"><img src="../img\LOGO.png" alt=yes"" class="img-fluid"></a>
+            <a href="index.html" class="logo mr-auto"><img src="../img\LOGO.png" alt="" class="img-fluid"></a>
 
             <nav class="nav-menu d-none d-lg-block align-items-center">
                 <ul>
@@ -52,7 +51,7 @@
     </header><!-- End Header -->
 
     <!-- Page Content -->
-    <div class="container">
+    <div class="container" id="contenct">
 
         <!-- Portfolio Item Heading -->
         <h1 class="my" id="labName"></h1>
@@ -170,6 +169,42 @@
                 </div>
             </div>
         </div>
+        <div>
+            <button id="btnMarcar" href="#confirm" type="button" data-toggle="modal" class="btn btn-primary ">Marcar Teste</button>
+        </div>
+
+
+        <footer id="footer">
+
+            <div class="container d-md-flex py-4">
+              &copy; Copyright <strong><span>Covid Test Booking</span></strong>. All Rights Reserved
+            </div>
+        </footer><!-- End Footer -->
+        
+
+        <div class="modal" id="confirm" tabindex="-1" role="dialog">
+            <form id="frmConfirm">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Confirmação</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Quer confirmar a sua marcação?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Sim</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
+                    </div>
+                    <div id="confirmMessage" class="col-lg-12 d-flex justify-content-center"></div>
+                </div>
+            </form>
+            
+        </div>
+
 
         <script>
             $(document).ready(function () {
