--- a/projeto/html/labs.html
+++ b/projeto/html/labs.html
@@ -18,7 +18,7 @@
 <body>
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center">
-            <a href="index.html" class="logo mr-auto"><img src="../img/LOGO.png" alt="" class="img-fluid"></a>
+            <a href="../index.html" class="logo mr-auto"><img src="../img/LOGO.png" alt="" class="img-fluid"></a>
             <nav class="nav-menu d-none d-lg-block align-items-center">
                 <ul>
                     <li class="active"><a href="../index.html">Home</a></li>
