--- a/projeto/index.html
+++ b/projeto/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="css\index.css" rel="stylesheet">
+  <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
   <!-- ======= Top Bar ======= -->
@@ -28,7 +28,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
-      <a href="index.html" class="logo mr-auto"><img src="img\LOGO.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo mr-auto"><img src="img/LOGO.png" alt="" class="img-fluid"></a>
       <nav class="nav-menu d-none d-lg-block align-items-center">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
@@ -278,18 +278,14 @@
                 class="collapsed">Os antibióticos são efetivos a prevenir e tratar a COVID-19?<i
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-parent=".faq-list">
-                <p>
-                  Não, os antibióticos são dirigidos a bactérias, não tendo efeito contra vírus. A COVID-19 é provocada por um vírus, o SARS-CoV-2, e, como tal, os antibióticos não são efetivos na prevenção ou tratamento. O uso indevido e sem indicação médica de antibióticos poderá contribuir para o aumento das resistências a antimicrobianos (antibióticos) com efeito negativo para a saúde individual e coletiva.
-                </p>
+                <p>Não, os antibióticos são dirigidos a bactérias, não tendo efeito contra vírus. A COVID-19 é provocada por um vírus, o SARS-CoV-2, e, como tal, os antibióticos não são efetivos na prevenção ou tratamento. O uso indevido e sem indicação médica de antibióticos poderá contribuir para o aumento das resistências a antimicrobianos (antibióticos) com efeito negativo para a saúde individual e coletiva.</p>
               </div>
             </li>
             <li data-aos="fade-up" data-aos-delay="400">
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-5"
                 class="collapsed">Onde posso fazer o teste?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-5" class="collapse" data-parent=".faq-list">
-                <p>
-                  Neste website pode fazer a marcação do teste á Covid-19.
-                </p>
+                <p>Neste website pode fazer a marcação do teste á Covid-19.</p>
               </div>
             </li>
           </ul>
@@ -322,7 +318,7 @@
         </div>
       </div>
       <div class="container">
-        <div class="row mt-5">
+        <div class="row mt-4">
           <div class="col-lg-4">
             <div class="info">
               <div class="address">
@@ -365,18 +361,13 @@
         </div>
       </div>
     </section><!-- End Contact Section -->
-
   </main>
-
   <!-- ======= Footer ======= -->
   <footer id="footer">
-
     <div class="container d-md-flex py-4">
       &copy; Copyright <strong><span>Covid Test Booking</span></strong>. All Rights Reserved
     </div>
   </footer><!-- End Footer -->
-
-
   <!-- MODAL LOGIN -->
   <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
@@ -388,7 +379,6 @@
           </button>
         </div>
         <div class="modal-body">
-
           <form id="frmLogin">
             <div class="form-group d-flex justify-content-center">
               <h5 class="modal-title d-flex justify-content-center " id="exampleModalLabel">Login</h5>
@@ -413,7 +403,6 @@
       </div>
     </div>
   </div>
-
   <!--MODAL REGISTAR-->
   <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
@@ -479,11 +468,7 @@
       </div>
     </div>
   </div>
-
-
   <script type="module" src="js\app.js"></script>
-
-
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
