--- a/projeto/html/adminUser.html
+++ b/projeto/html/adminUser.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                  <a class="nav-link" aria-current="page" href="#users">Utlizadores</a>
+                  <a class="nav-link" aria-current="page" href="../html/adminUser.html">Utlizadores</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link " aria-current="page" href="#">Gamificação</a>
@@ -57,10 +57,9 @@
        <th>Points</th>
        <th>Type</th>
        <th>Actions</th>
-        
     </table>
   </div>
 </body>
-<script type="module" src="..\js\app.js"></script>
+<script type="module" src="..\js\app.js"></script>  
 
 </html>
