--- a/projeto/html/detailLab.html
+++ b/projeto/html/detailLab.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Covid Test Booking</title>
-    <!-- REFERÊNCIA AO CSS DO BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
@@ -19,7 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.js"></script>
 
 
-    <link href="../css\detailLab.css" rel="stylesheet">
+    <link href="../css/detailLab.css" rel="stylesheet">
 
 </head>
 
@@ -27,15 +26,15 @@
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center">
 
-            <a href="index.html" class="logo mr-auto"><img src="../img\LOGO.png" alt="" class="img-fluid"></a>
+            <a href="../index.html" class="logo mr-auto"><img src="../img/LOGO.png" alt="" class="img-fluid"></a>
 
             <nav class="nav-menu d-none d-lg-block align-items-center">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#services">Serviços</a></li>
-                    <li><a href="#tiposteste">Testes</a></li>
-                    <li><a href="#doctors">Postos</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../index.html#about">Sobre</a></li>
+                    <li><a href="../index.html#services">Serviços</a></li>
+                    <li><a href="../index.html#tiposteste">Testes</a></li>
+                    <li><a href="../html/labs.html">Centros</a></li>
                 </ul>
             </nav><!-- .nav-menu -->
 
@@ -45,8 +44,6 @@
 
             <a href="#" class="appointment-btn scrollto" style="visibility: hidden;" id="btnLogout">Logout</a>
 
-            <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerModal" id="btnRegister">Registar</button> -->
-            <button type="button" class="btn btn-primary" style="visibility: hidden;" id="btnLogout">Logout</button>
         </div>
     </header><!-- End Header -->
 
@@ -78,9 +75,6 @@
         </div>
 
         <h3 id="marcartxt">Marque o seu teste:</h3>
-
-
-
         <div class="container-fluid px-0 px-sm-4 mx-auto">
             <div class="row justify-content-center mx-0">
                 <div class="col-lg-10">
@@ -100,18 +94,16 @@
             </div>
         </div>
         <div>
-            <button id="btnMarcar" href="#confirm" type="button" data-toggle="modal" class="btn btn-primary ">Marcar Teste</button>
+            <button id="btnMarcar" href="#confirm" type="button" data-toggle="modal" class="btn btn-primary">Marcar Teste</button>
         </div>
 
 
         <footer id="footer">
-
             <div class="container d-md-flex py-4">
               &copy; Copyright <strong><span>Covid Test Booking</span></strong>. All Rights Reserved
             </div>
         </footer><!-- End Footer -->
         
-
         <div class="modal" id="confirm" tabindex="-1" role="dialog">
             <form id="frmConfirm">
                 <div class="modal-dialog" role="document">
