--- a/projeto/html/labs.html
+++ b/projeto/html/labs.html
@@ -52,7 +52,7 @@
                         <input id="txtLab" type="text" class="form-control m-2" />
                     </div>
                     <div class="form-group ml-3">
-                        <button id="btnFilter" type="button" class="btn btn-primary">Filtro</button>
+                        <button id="btnFilter" type="button" class="btn btn-primary">Filtrar</button>
                         <button id="btnSort" type="button" class="btn btn-primary m-2">Ordenar</button>
                     </div>
                 </form>
