--- a/projeto/index.html
+++ b/projeto/index.html
@@ -343,7 +343,8 @@
               <div class="form-group">
                 <textarea class="form-control" name="message" id="message_contact" rows="5" placeholder="Mensagem"></textarea>
               </div>
-              <div class="text-center"><a href="#" class="btn btn-primary">Submeter</a>
+              <div class="text-center">
+                <button type="submit" id="btnMessage" class="btn btn-primary">Submeter</button>
               </div>
             </div>
           </div>
