--- a/projeto/html/detailLab.html
+++ b/projeto/html/detailLab.html
@@ -82,7 +82,7 @@
                         <form autocomplete="off">
                             <div class="card-header">
                                 <div class="mx-0 mb-0 row justify-content-sm-center justify-content-start px-1"> 
-                                    <input type="date" name="bday" max="2021-06-20" min="1800-01-01"
+                                    <input type="date" name="bday" max="2021-12-31" min=getCurrentDate()
                                         class="datepicker" id="dataTeste"></span> </div>
                             </div>
                             <div class="card-body p-3 p-sm-5">
@@ -118,7 +118,7 @@
                         <p>Quer confirmar a sua marcação?</p>
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary">Sim</button>
+                        <button id="btnSim" type="submit" class="btn btn-primary">Sim</button>
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
                     </div>
                     <div id="confirmMessage" class="col-lg-12 d-flex justify-content-center"></div>
@@ -129,7 +129,22 @@
 
 
 
+        <script>
+            $(document).ready(function () {
 
+                $('.datepicker').datepicker({
+                    format: 'dd-mm-yyyy',
+                    autoclose: true,
+                    startDate: '0d'
+                });
+
+                $('.cell').click(function () {
+                    $('.cell').removeClass('select');
+                    $(this).addClass('select');
+                });
+
+            });
+        </script>
 
         <!-- REFERÊNCIA AO APP.JS -->
         <script type="module" src="../js/app.js"></script>
